# tg_tracker

./: .env.example  .gitignore  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/core/: config.py
app/database/: database.py
app/db/: session.py
app/expenses/: controller.py  models.py  repository.py  router.py  schemas.py  service.py
bot/: bot.py
homework/: homework-2.md
