[project]
name = "tg-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.28.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
